# genrile

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  README.md  blah.h  go.sh  run_clang_format.sh
meta/: constexpr.h  container_helpers.h  meta_parser.h
src/: CMakeLists.txt  linked_list.h  meta.h  parse_helpers.cpp  parse_helpers.h  types.h  value.cpp  value.h
tests/: CMakeLists.txt  catch.hpp  evil.cpp  meta.cpp  meta_parser.cpp  parse.cpp  value.cpp
